[package]
name = "lib4tables_concat"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
num-rational = "0.4"
num-traits = "0.2"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
walkdir = "2.4"
rayon = "1.8" # For parallel processing

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
html_output = []
bbcode_output = []
csv_output = []
markdown_output = []
